--- a/Footer/root/css/style.css
+++ b/Footer/root/css/style.css
@@ -1,48 +1,227 @@
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\000031}}
-footer {
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\000032}}
+footer .top_footer {
   background-color: #111; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\000033}}
-  footer .footer_custom {
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\000034}}
+  footer .top_footer .footer_custom {
+    max-width: 1175px;
+    margin: 0 auto;
+    padding: 0 10px;
     padding-top: 57px; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\000036}}
-    footer .footer_custom div h3 {
-      color: #FFF;
-      font-size: 20px;
-      font-weight: 400; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\000039}}
+    footer .top_footer .footer_custom div {
+      float: left; }
 @media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000311}}
-    footer .footer_custom div p {
-      color: #989898; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000314}}
-    footer .footer_custom div a {
-      color: #989898; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000317}}
-    footer .footer_custom div.about_footer {
-      padding: 0; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000319}}
-      footer .footer_custom div.about_footer p {
-        margin-bottom: 45px;
-        font-size: 13px; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000323}}
-      footer .footer_custom div.about_footer a {
-        display: block;
-        border-top: 1px solid #999;
-        padding-top: 20px;
-        padding-bottom: 20px; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000330}}
-    footer .footer_custom div.infomation_footer {
-      padding-left: 28px; }
+      footer .top_footer .footer_custom div h3 {
+        color: #FFF;
+        font-size: 20px;
+        font-weight: 400;
+        margin-bottom: 30px;
+        margin-top: 16px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000318}}
+      footer .top_footer .footer_custom div p {
+        color: #989898; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000321}}
+      footer .top_footer .footer_custom div a {
+        color: #989898; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000324}}
+      footer .top_footer .footer_custom div.about_footer {
+        width: 28%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000326}}
+        footer .top_footer .footer_custom div.about_footer p {
+          margin-bottom: 12px;
+          font-size: 13px;
+          line-height: 24px;
+          padding-right: 20px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000332}}
-      footer .footer_custom div.infomation_footer ul {
-        padding-left: 0; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000334}}
-        footer .footer_custom div.infomation_footer ul li {
-          list-style: none; }
+        footer .top_footer .footer_custom div.about_footer a {
+          display: block;
+          border-top: 1px solid #999;
+          padding-top: 18px;
+          padding-bottom: 16px;
+          font-size: 11px;
+          padding-left: 23px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000339}}
-    footer .footer_custom div.quick_link_footer {
-      padding-left: 5px; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000341}}
-      footer .footer_custom div.quick_link_footer ul {
-        padding-left: 0; }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000343}}
-        footer .footer_custom div.quick_link_footer ul li {
-          list-style: none; }
+          footer .top_footer .footer_custom div.about_footer a.adress_footer {
+            background-image: url("../img/icon_earch.png");
+            background-position: left center;
+            background-size: 11px;
+            background-repeat: no-repeat; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000345}}
+          footer .top_footer .footer_custom div.about_footer a.email_footer {
+            background-image: url("../img/icon-email.png");
+            background-position: left center;
+            background-size: 11px;
+            background-repeat: no-repeat; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000351}}
+          footer .top_footer .footer_custom div.about_footer a.phone_footer {
+            background-image: url("../img/icon-call.png");
+            background-position: left center;
+            background-size: 11px;
+            background-repeat: no-repeat; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000359}}
+      footer .top_footer .footer_custom div.infomation_footer {
+        width: 22%;
+        padding-left: 84px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000362}}
+        footer .top_footer .footer_custom div.infomation_footer h3 {
+          margin-bottom: 35px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000365}}
+        footer .top_footer .footer_custom div.infomation_footer ul {
+          padding-left: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000367}}
+          footer .top_footer .footer_custom div.infomation_footer ul li {
+            list-style: none;
+            margin-bottom: 12px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000370}}
+            footer .top_footer .footer_custom div.infomation_footer ul li a {
+              font-size: 12px;
+              padding-left: 21px;
+              background-image: url("../img/icon_arrow_right.png");
+              background-position: left center;
+              background-size: 11px;
+              background-repeat: no-repeat; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000381}}
+      footer .top_footer .footer_custom div.quick_link_footer {
+        width: 20%;
+        padding-left: 93px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000384}}
+        footer .top_footer .footer_custom div.quick_link_footer h3 {
+          margin-bottom: 35px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000387}}
+        footer .top_footer .footer_custom div.quick_link_footer ul {
+          padding-left: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000389}}
+          footer .top_footer .footer_custom div.quick_link_footer ul li {
+            list-style: none;
+            margin-bottom: 12px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\0000392}}
+            footer .top_footer .footer_custom div.quick_link_footer ul li a {
+              font-size: 12px;
+              padding-left: 22px;
+              background-image: url("../img/icon_arrow_right.png");
+              background-position: left center;
+              background-size: 11px;
+              background-repeat: no-repeat; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003103}}
+      footer .top_footer .footer_custom div.sub_footer {
+        width: 30%;
+        padding-left: 90px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003106}}
+        footer .top_footer .footer_custom div.sub_footer h3 {
+          margin-bottom: 33px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003109}}
+        footer .top_footer .footer_custom div.sub_footer p {
+          font-size: 13px;
+          line-height: 25px;
+          padding-right: 20px;
+          margin-bottom: 22px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003115}}
+        footer .top_footer .footer_custom div.sub_footer form {
+          position: relative; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003117}}
+          footer .top_footer .footer_custom div.sub_footer form input {
+            height: 50px;
+            background: none;
+            border: 1px solid;
+            width: 100%;
+            padding-left: 14px;
+            border-top-left-radius: 3px;
+            border-bottom-left-radius: 3px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003126}}
+          footer .top_footer .footer_custom div.sub_footer form a {
+            background-image: url("../img/icon_letter_03.png");
+            background-position: center;
+            background-size: 11px;
+            background-repeat: no-repeat;
+            position: absolute;
+            height: 50px;
+            width: 55px;
+            top: 50%;
+            right: 0;
+            background-color: #f16192;
+            transform: translateY(-50%);
+            border-top-right-radius: 3px;
+            border-bottom-right-radius: 3px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003142}}
+        footer .top_footer .footer_custom div.sub_footer .social_icon {
+          margin-top: 23px;
+          clear: both; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003145}}
+          footer .top_footer .footer_custom div.sub_footer .social_icon a {
+            display: block;
+            float: left; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003148}}
+            footer .top_footer .footer_custom div.sub_footer .social_icon a + a {
+              margin-left: 22px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003158}}
+footer .bottom_footer {
+  background-color: #000;
+  padding: 35px 0px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003161}}
+  footer .bottom_footer p {
+    font-size: 12px;
+    margin-bottom: 0;
+    color: #FFF; }
+
+@media (max-width: 1366px) {
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003173}}
+  footer .top_footer .footer_custom div.infomation_footer {
+    padding-left: 30px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003176}}
+  footer .top_footer .footer_custom div.quick_link_footer {
+    padding-left: 30px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003179}}
+  footer .top_footer .footer_custom div.sub_footer {
+    padding-left: 30px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003185}}
+  footer .bottom_footer {
+    background-color: #000;
+    padding: 35px 0px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003188}}
+    footer .bottom_footer p {
+      font-size: 12px;
+      margin-bottom: 0;
+      color: #FFF; } }
+@media (max-width: 767px) {
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003201}}
+  footer .top_footer .footer_custom div h3 {
+    margin-bottom: 20px !important; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003204}}
+  footer .top_footer .footer_custom div.about_footer {
+    width: 100%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003207}}
+  footer .top_footer .footer_custom div.infomation_footer {
+    width: 100%;
+    padding-left: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003211}}
+  footer .top_footer .footer_custom div.quick_link_footer {
+    width: 100%;
+    padding-left: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003215}}
+  footer .top_footer .footer_custom div.sub_footer {
+    width: 100%;
+    padding-left: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003218}}
+    footer .top_footer .footer_custom div.sub_footer p {
+      margin-bottom: 20px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003221}}
+    footer .top_footer .footer_custom div.sub_footer .social_icon {
+      text-align: center;
+      width: 100%;
+      margin-top: 23px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003225}}
+      footer .top_footer .footer_custom div.sub_footer .social_icon a {
+        display: inline;
+        float: none; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003228}}
+        footer .top_footer .footer_custom div.sub_footer .social_icon a + a {
+          margin-left: 22px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003238}}
+  footer .bottom_footer {
+    background-color: #000;
+    padding: 35px 0px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Freelancer\/Demo1\/Footer\/root\/css\/style\.scss}line{font-family:\00003241}}
+    footer .bottom_footer p {
+      font-size: 12px;
+      margin-bottom: 0;
+      color: #FFF; } }
