--- a/Footer/root/css/style.scss
+++ b/Footer/root/css/style.scss
@@ -1,52 +1,248 @@
 footer {
-	background-color: #111;
-	.footer_custom {
-		padding-top: 57px;
-		div {
-			h3 {
-				color: #FFF;
-				font-size: 20px;
-				font-weight: 400;
-			}
-			p {
-				color: #989898;
-			}
-			a {
-				color: #989898;
-			}
-			&.about_footer {
-				padding: 0;
+	.top_footer {
+		background-color: #111;
+		.footer_custom {
+		    max-width: 1175px;
+		    margin: 0 auto;
+		    padding: 0 10px;
+		    padding-top: 57px;
+			div {
+				float: left;
+				h3 {
+					color: #FFF;
+					font-size: 20px;
+					font-weight: 400;
+					margin-bottom: 30px;
+					margin-top: 16px;
+				}
 				p {
-					margin-bottom: 45px;
-					font-size: 13px;
+					color: #989898;
 				}
 				a {
-					display: block;
-					border-top: 1px solid #999;
-					padding-top: 20px;
-					padding-bottom: 20px;
+					color: #989898;
 				}
-			}
-			&.infomation_footer {
-				padding-left: 28px;
-				ul {
-					padding-left: 0;
-					li {
-						list-style: none;
+				&.about_footer {
+					width: 28%;
+					p {
+					    margin-bottom: 12px;
+					    font-size: 13px;
+					    line-height: 24px;
+					    padding-right: 20px;
+					}
+					a {
+					    display: block;
+					    border-top: 1px solid #999;
+					    padding-top: 18px;
+					    padding-bottom: 16px;
+					    font-size: 11px;
+					    padding-left: 23px;
+					    &.adress_footer {
+							background-image: url('../img/icon_earch.png');
+							background-position: left center;
+							background-size: 11px;
+							background-repeat: no-repeat;
+					    }
+					    &.email_footer {
+							background-image: url('../img/icon-email.png');
+							background-position: left center;
+							background-size: 11px;
+							background-repeat: no-repeat;
+					    }
+					    &.phone_footer {
+							background-image: url('../img/icon-call.png');
+							background-position: left center;
+							background-size: 11px;
+							background-repeat: no-repeat;
+					    }
 					}
 				}
-			}
-			&.quick_link_footer {
-				padding-left: 5px;
-				ul {
-					padding-left: 0;
-					li {
-						list-style: none;
+				&.infomation_footer {
+				    width: 22%;
+				    padding-left: 84px;
+					h3 {
+						margin-bottom: 35px;
 					}
-				}								
+					ul {
+						padding-left: 0;
+						li {
+							list-style: none;
+							margin-bottom: 12px;
+							a {
+								font-size: 12px;
+								padding-left: 21px;
+								background-image: url('../img/icon_arrow_right.png');
+								background-position: left center;
+								background-size: 11px;
+								background-repeat: no-repeat;
+							}
+						}
+					}
+				}
+				&.quick_link_footer {
+				    width: 20%;
+				    padding-left: 93px;
+					h3 {
+						margin-bottom: 35px;
+					}
+					ul {
+						padding-left: 0;
+						li {
+							list-style: none;
+							margin-bottom: 12px;
+							a {
+								font-size: 12px;
+								padding-left: 22px;
+								background-image: url('../img/icon_arrow_right.png');
+								background-position: left center;
+								background-size: 11px;
+								background-repeat: no-repeat;
+							}
+						}
+					}								
+				}
+				&.sub_footer {
+				    width: 30%;
+				    padding-left: 90px;
+					h3 {
+						margin-bottom: 33px;
+					}
+					p {
+						font-size: 13px;
+					    line-height: 25px;
+					    padding-right: 20px;
+					    margin-bottom: 22px;
+					}
+					form {
+						position: relative;
+						input {
+						    height: 50px;
+						    background: none;
+						    border: 1px solid;
+						    width: 100%;
+						    padding-left: 14px;
+						    border-top-left-radius: 3px;
+							border-bottom-left-radius: 3px;
+						}
+						a {
+							background-image: url('../img/icon_letter_03.png');
+							background-position: center;
+							background-size: 11px;
+							background-repeat: no-repeat;
+							position: absolute;
+							height: 50px;
+							width: 55px;
+							top: 50%;
+							right: 0;
+							background-color: #f16192;
+							transform: translateY(-50%);
+							border-top-right-radius: 3px;
+							border-bottom-right-radius: 3px;		
+						}
+					}
+					.social_icon {
+						margin-top: 23px;
+						clear: both;
+						a {
+							display: block;
+							float: left;
+							& + a {
+								margin-left: 22px;
+							}
+						}
+
+					}
+				}									
 			}
-			&.sub_footer {
-			}									
 		}
 	}
+	.bottom_footer {
+		background-color: #000;
+		padding: 35px 0px;
+		p {
+			font-size: 12px;
+			margin-bottom: 0;
+			color: #FFF;
+		}
+	}
+}
+@media (max-width: 1366px) {
+	footer {
+		.top_footer {
+			.footer_custom {
+				div {
+					&.infomation_footer {
+					    padding-left: 30px;
+					}
+					&.quick_link_footer {
+					    padding-left: 30px;								
+					}
+					&.sub_footer {
+					    padding-left: 30px;
+					}									
+				}
+			}
+		}
+		.bottom_footer {
+			background-color: #000;
+			padding: 35px 0px;
+			p {
+				font-size: 12px;
+				margin-bottom: 0;
+				color: #FFF;
+			}
+		}
+	}
+}
+@media (max-width: 767px) {
+	footer {
+		.top_footer {
+			.footer_custom {
+				div {
+					h3 {
+						margin-bottom: 20px !important;
+					}
+					&.about_footer {
+						width: 100%;
+					}
+					&.infomation_footer {
+					    width: 100%;
+					    padding-left: 0;
+					}
+					&.quick_link_footer {
+					    width: 100%;
+					    padding-left: 0;		
+					}
+					&.sub_footer {
+					    width: 100%;
+					    padding-left: 0;
+					    p {
+					    	margin-bottom: 20px;
+					    }
+					    .social_icon {
+					    	text-align: center;
+					    	width: 100%;
+							margin-top: 23px;
+							a {
+								display: inline;
+								float: none;
+								& + a {
+									margin-left: 22px;
+								}
+							}
+
+						}
+					}									
+				}
+			}
+		}
+		.bottom_footer {
+			background-color: #000;
+			padding: 35px 0px;
+			p {
+				font-size: 12px;
+				margin-bottom: 0;
+				color: #FFF;
+			}
+		}
+	}	
 }
