--- a/Client Logo/root/css/style.scss
+++ b/Client Logo/root/css/style.scss
@@ -1,248 +1,103 @@
-footer {
-	.top_footer {
-		background-color: #111;
-		.footer_custom {
-		    max-width: 1175px;
-		    margin: 0 auto;
-		    padding: 0 10px;
-		    padding-top: 57px;
-			div {
-				float: left;
-				h3 {
-					color: #FFF;
-					font-size: 20px;
-					font-weight: 400;
-					margin-bottom: 30px;
-					margin-top: 16px;
-				}
-				p {
-					color: #989898;
-				}
-				a {
-					color: #989898;
-				}
-				&.about_footer {
-					width: 28%;
-					p {
-					    margin-bottom: 12px;
-					    font-size: 13px;
-					    line-height: 24px;
-					    padding-right: 20px;
-					}
-					a {
-					    display: block;
-					    border-top: 1px solid #999;
-					    padding-top: 18px;
-					    padding-bottom: 16px;
-					    font-size: 11px;
-					    padding-left: 23px;
-					    &.adress_footer {
-							background-image: url('../img/icon_earch.png');
-							background-position: left center;
-							background-size: 11px;
-							background-repeat: no-repeat;
-					    }
-					    &.email_footer {
-							background-image: url('../img/icon-email.png');
-							background-position: left center;
-							background-size: 11px;
-							background-repeat: no-repeat;
-					    }
-					    &.phone_footer {
-							background-image: url('../img/icon-call.png');
-							background-position: left center;
-							background-size: 11px;
-							background-repeat: no-repeat;
-					    }
-					}
-				}
-				&.infomation_footer {
-				    width: 22%;
-				    padding-left: 84px;
-					h3 {
-						margin-bottom: 35px;
-					}
-					ul {
-						padding-left: 0;
-						li {
-							list-style: none;
-							margin-bottom: 12px;
-							a {
-								font-size: 12px;
-								padding-left: 21px;
-								background-image: url('../img/icon_arrow_right.png');
-								background-position: left center;
-								background-size: 11px;
-								background-repeat: no-repeat;
-							}
-						}
-					}
-				}
-				&.quick_link_footer {
-				    width: 20%;
-				    padding-left: 93px;
-					h3 {
-						margin-bottom: 35px;
-					}
-					ul {
-						padding-left: 0;
-						li {
-							list-style: none;
-							margin-bottom: 12px;
-							a {
-								font-size: 12px;
-								padding-left: 22px;
-								background-image: url('../img/icon_arrow_right.png');
-								background-position: left center;
-								background-size: 11px;
-								background-repeat: no-repeat;
-							}
-						}
-					}								
-				}
-				&.sub_footer {
-				    width: 30%;
-				    padding-left: 90px;
-					h3 {
-						margin-bottom: 33px;
-					}
-					p {
-						font-size: 13px;
-					    line-height: 25px;
-					    padding-right: 20px;
-					    margin-bottom: 22px;
-					}
-					form {
-						position: relative;
-						input {
-						    height: 50px;
-						    background: none;
-						    border: 1px solid;
-						    width: 100%;
-						    padding-left: 14px;
-						    border-top-left-radius: 3px;
-							border-bottom-left-radius: 3px;
-						}
-						a {
-							background-image: url('../img/icon_letter_03.png');
-							background-position: center;
-							background-size: 11px;
-							background-repeat: no-repeat;
-							position: absolute;
-							height: 50px;
-							width: 55px;
-							top: 50%;
-							right: 0;
-							background-color: #f16192;
-							transform: translateY(-50%);
-							border-top-right-radius: 3px;
-							border-bottom-right-radius: 3px;		
-						}
-					}
-					.social_icon {
-						margin-top: 23px;
-						clear: both;
-						a {
-							display: block;
-							float: left;
-							& + a {
-								margin-left: 22px;
-							}
-						}
-
-					}
-				}									
+.client_logo {
+	padding-top: 145px;
+	.client_logo_left {
+		float: left;
+		width: 55%;
+		h2 {
+			color: #6966bb;
+			margin: 0;
+		}
+		.line_client_logo {
+			height: 1px;
+			position: relative;
+			width: 30%;
+			float: left;
+			background-color: #d0d0d0;
+			margin: 37px 0px;
+			&:after {
+				content: "";
+				position: absolute;
+				left: 0;
+				top: -1px;
+				height: 3px;
+				width: 20%;
+				background-color: #f16192;
 			}
 		}
-	}
-	.bottom_footer {
-		background-color: #000;
-		padding: 35px 0px;
 		p {
-			font-size: 12px;
-			margin-bottom: 0;
+			clear: both;
+			font-size: 15px;
+			color: #888;
+			line-height: 25px;
+			margin-bottom: 33px;
+		}
+		a {
+			padding: 15px 63px 12px;
+			background-color: #f16192;
+			border-radius: 3px;
 			color: #FFF;
+			border-bottom: 3px solid #be3564;
+			display: inline-block;
+			font-size: 15px;
 		}
 	}
-}
-@media (max-width: 1366px) {
-	footer {
-		.top_footer {
-			.footer_custom {
-				div {
-					&.infomation_footer {
-					    padding-left: 30px;
-					}
-					&.quick_link_footer {
-					    padding-left: 30px;								
-					}
-					&.sub_footer {
-					    padding-left: 30px;
-					}									
-				}
+	.client_logo_right {
+		float: left;
+		width: 45%;
+		.imgs {
+			&:after {
+				content: "";
+				width: 100%;
+				display: table;
 			}
-		}
-		.bottom_footer {
-			background-color: #000;
-			padding: 35px 0px;
-			p {
-				font-size: 12px;
-				margin-bottom: 0;
-				color: #FFF;
+			img {
+				padding:7.5px;
+				width: 33.333333%;
+				float: left;
+				&:nth-of-type(4) {
+					clear: both;
+				}
 			}
 		}
 	}
 }
-@media (max-width: 767px) {
-	footer {
-		.top_footer {
-			.footer_custom {
-				div {
-					h3 {
-						margin-bottom: 20px !important;
-					}
-					&.about_footer {
-						width: 100%;
-					}
-					&.infomation_footer {
-					    width: 100%;
-					    padding-left: 0;
-					}
-					&.quick_link_footer {
-					    width: 100%;
-					    padding-left: 0;		
-					}
-					&.sub_footer {
-					    width: 100%;
-					    padding-left: 0;
-					    p {
-					    	margin-bottom: 20px;
-					    }
-					    .social_icon {
-					    	text-align: center;
-					    	width: 100%;
-							margin-top: 23px;
-							a {
-								display: inline;
-								float: none;
-								& + a {
-									margin-left: 22px;
-								}
-							}
-
-						}
-					}									
-				}
-			}
-		}
-		.bottom_footer {
-			background-color: #000;
-			padding: 35px 0px;
+@media (max-width: 990px) {
+	.client_logo {
+		.client_logo_left {
+			width: 100%;
+			float: none;
 			p {
-				font-size: 12px;
-				margin-bottom: 0;
-				color: #FFF;
-			}
+				text-align: left;
+			}			
 		}
-	}	
+		.client_logo_right {
+			width: 100%;
+			text-align: center;
+			float: none;
+			margin-top: 12px;
+			.imgs {
+				margin: -10px;
+				img {
+					padding: 10px;
+				}
+			}			
+		}
+	}
+}
+@media (max-width: 530px) {
+	.client_logo {
+		.client_logo_right {
+			.imgs {
+				img {
+					width: 50%;
+					&:nth-of-type(3n + 1) {
+						clear: both;
+					}
+					&:nth-of-type(4) {
+						clear: none;
+					}
+				}
+			}			
+		}
+	}
 }
